[package]
name = "ddcutil"
version = "0.0.1"
authors = ["arcnmx"]

description = "DDC/CI access via libddcutil"
keywords = ["ddc/ci", "ddc", "ci", "ddcutil", "ddccontrol"]

documentation = "http://arcnmx.github.io/ddcutil-rs/ddcutil"
repository = "https://github.com/arcnmx/ddcutil-rs"
readme = "README.md"
license = "GPL-2.0-or-later"

[badges]
travis-ci = { repository = "arcnmx/ddcutil-rs" }
maintenance = { status = "passively-maintained" } # actively-developed, passively-maintained, as-is, none, experimental, looking-for-maintainer, deprecated

[dependencies]
ddcutil-sys = { version = "0.0.1", path = "sys" }
bitflags = "^1.0.1"
libc = "^0.2.36"
