[package]
name = "ddcutil-sys"
version = "0.0.1"
authors = ["arcnmx"]

description = "libddcutil FFI bindings"
keywords = ["ddcci", "ddc", "ci", "ddcutil", "vcp"]

documentation = "http://arcnmx.github.io/ddcutil-rs/ddcutil_sys"
repository = "https://github.com/arcnmx/ddcutil-rs"
readme = "../README.md"
license = "GPL-2.0+"

[badges]
travis-ci = { repository = "arcnmx/ddcutil-rs" }
maintenance = { status = "passively-maintained" }

[dependencies]
libc = "^0.2.36"
